tests/parser/should_fail/patFail008.hs
{-# LANGUAGE Arrows #-}
module PatFail008 where

f (a -< b) = _
